--- a/roles/pre_ohpc/tasks/main.yml
+++ b/roles/pre_ohpc/tasks/main.yml
@@ -23,7 +23,7 @@
        - "libselinux-python"
        - "libsemanage-python"
        - "policycoreutils"
-       - "lua"  # testing; this could fix the lmod-ohpc issue?
+#       - "lua"  # testing; this could fix the lmod-ohpc issue?
  #otherwise, do a yum update --skip-broken, yum update...
 
    - name: get OpenHPC Repo #hardcoded version # :(
@@ -98,7 +98,7 @@
    - name: firewalld restart
      service: name=firewalld state=restarted
  
-   - name: enable and restart ntpd
+   - name: enable and restart chrony
      service: name=chronyd state=restarted enabled=yes
  
    - name: set up /etc/hosts
