removed duplicate slurm.conf

--- a/roles/compute_build_nodes/tasks/main.yml
+++ b/roles/compute_build_nodes/tasks/main.yml
@@ -39,7 +39,7 @@
   #" for vim
 
      - name: set files to provision
-       command: wwsh -y provision set {{ item.name }} --vnfs={{ item.vnfs }} --bootstrap={{ build_kernel_ver }} --files=passwd,group,shadow,munge.key,slurm.conf,dynamic_hosts,network,slurm.conf
+       command: wwsh -y provision set {{ item.name }} --vnfs={{ item.vnfs }} --bootstrap={{ build_kernel_ver }} --files=passwd,group,shadow,munge.key,slurm.conf,dynamic_hosts,network
        with_items: "{{ compute_nodes }}"
 
      - name: remove node from slurm.conf if it exists already # to avoid duplication!
