--- a/roles/ohpc_config/tasks/main.yml
+++ b/roles/ohpc_config/tasks/main.yml
@@ -7,6 +7,12 @@
    - name: enable tftp
      lineinfile: dest=/etc/xinetd.d/tftp regexp="^(\s+)disable(\s+)= yes" line="\1disable\2= no" backrefs=yes
 
+   - name: enable httpd access to /srv/warewulf
+     command: chcon -t httpd_sys_content_t -R /srv/warewulf
+#       target: '/srv/warewulf(/.*)?'
+#       setype: httpd_sys_content_t
+#       state: present
+
 #No need for this in OHPC-1.3.3
 #   - name: config warewulf http
 #     lineinfile: 
@@ -68,8 +74,3 @@
        src: /root/.ssh/cluster.pub
        dest: ./cluster_root.pub
        flat: yes
-
-   - template: src=dhcpd.conf.j2 dest=/etc/dhcp/dhcpd.conf
-   
-   - name: restart dhcpd
-     service: name=dhcpd state=restarted enabled=yes
