--- a/roles/compute_build_nodes/tasks/main.yml
+++ b/roles/compute_build_nodes/tasks/main.yml
@@ -67,6 +67,9 @@
      command: wwsh -y provision set {{ compute_node_glob }} --vnfs={{ compute_chroot }} --bootstrap={{ build_kernel_ver }} --files=passwd,group,shadow,munge.key,slurm.conf,dynamic_hosts,network
      when: node_inventory_auto == true
 
+   - name: sync files #also generates dynamic hosts on headnode!
+     command: wwsh file sync
+
 #   - name: add compute nodes to ansible inventory for wait
 #     add_host: name={{ node_glob }} group="compute nodes"
     
