--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -18,11 +18,14 @@
    - name: create slurm.conf
      template: src=slurm_conf.j2 dest=/etc/slurm/slurm.conf
 
+   - name: create slurmdbd.conf
+     template: src=slurmdbd_conf.j2 dest=/etc/slurm/slurmdbd.conf
+
    - name: set the gres.conf on the master
      copy: src=gres.conf dest=/etc/slurm/gres.conf
 
-   - name: create the slurmacct log file
-     file: path=/var/log/slurmacct.log state=touch owner=slurm group=slurm
+   - name: create the slurmdbd log file
+     file: path=/var/log/slurmdbd.log state=touch owner=slurm group=slurm
 
    - name: insert rhel-xcbc WW template
      copy: src=include-rhel-xcbc dest="{{ template_path }}include-rhel-xcbc"
@@ -40,3 +43,22 @@
        insertafter: '^\$ENV\{\"PATH\"\}'
        line: "delete @ENV{'PATH', 'IFS', 'CDPATH', 'ENV', 'BASH_ENV'};"
        state: present
+
+ 
+   - name: initialize slurmdb databases
+     mysql_db:
+       name: "{{ slurm_acct_loc }}"
+       state: present
+
+   - name: create db user
+     mysql_user:
+       name: "{{ slurmdbd_user }}"
+       password: "{{ slurmddb_pass }}"
+       priv: "{{ slurm_acct_loc }}.*:ALL"
+       state: present
+
+   - name: start and enable slurmdbd
+     service: 
+       name: slurmdbd
+       state: started
+       enabled: yes
