--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -21,6 +21,9 @@
    - name: create slurmdbd.conf
      template: src=slurmdbd_conf.j2 dest=/etc/slurm/slurmdbd.conf
 
+   - name: put the sacctmgr config in /etc/slurm
+     copy: src=xcbc-example.cfg dest=/etc/slurm/sacctmgr-heirarchy.cfg
+
    - name: set the gres.conf on the master
      copy: src=gres.conf dest=/etc/slurm/gres.conf
 
@@ -62,3 +65,13 @@
        name: slurmdbd
        state: started
        enabled: yes
+
+   - name: load sacctmgr config
+     command: sacctmgr load /etc/slurm/sacctmgr-heirarchy.cfg
+
+   - name: start and enable slurmctld
+     service: 
+       name: slurmctld
+       state: started
+       enabled: yes
+
