--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -1,13 +1,11 @@
 ---
 
-   - name: install OpenHPC base
-     yum: name="@ohpc-base" state=present
-
-   - name: install OpenHPC warewulf
-     yum: name="@ohpc-warewulf" state=present
-
-   - name: install OpenHPC slurm server
-     yum: name="@ohpc-slurm-server" state=present
+   - name: install OpenHPC base, warewulf, and slurm server
+     yum: name={{ item }} state=latest
+     with_items:
+       - "ohpc-base"
+       - "ohpc-warewulf"
+       - "ohpc-slurm-server"
 
    - name: yum update
      yum: name=* state=latest update_cache=yes
