removed ohpc-slurm-client groupinstall

--- a/roles/compute_build_vnfs/tasks/main.yml
+++ b/roles/compute_build_vnfs/tasks/main.yml
@@ -41,11 +41,7 @@
      copy: src=/etc/resolv.conf dest="{{ compute_chroot_loc }}/etc/resolv.conf" #"
 
    - name: yum install into the image chroot
-     command: yum -y --installroot={{ compute_chroot_loc }} install chrony kernel lmod-ohpc grub2 freeipmi ipmitool
-#" for vim
-
-   - name: yum install slurm client into image
-     command: yum -y --installroot={{ compute_chroot_loc }} groupinstall ohpc-slurm-client
+     command: yum -y --installroot={{ compute_chroot_loc }} install chrony kernel lmod-ohpc grub2 freeipmi ipmitool ohpc-slurm-client
 #" for vim
 
    - name: copy ssh keys over
