--- a/roles/compute_build_vnfs/tasks/main.yml
+++ b/roles/compute_build_vnfs/tasks/main.yml
@@ -65,6 +65,9 @@
    - name: add headnode to compute chrony.conf
      lineinfile: line="server {{ headnode_private_ip }}" dest={{ compute_chroot_loc }}/etc/chrony.conf state=present
 
+   - name: slurmd on compute image enabled 
+     command: chroot '{{ compute_chroot_loc }}' systemctl enable slurmd
+
    - name: wwimport file into image (passwd)
      command: wwsh file import /etc/passwd
 
@@ -75,7 +78,7 @@
      command: wwsh file import /etc/shadow
 
    - name: wwimport file into image (slurm)
-     command: wwsh file import /etc/slurm/slurm.conf
+     command: wwsh file import /etc/slurm/slurm.conf --name slurm.conf
 
    - name: wwimport file into image (munge)
      command: wwsh file import /etc/munge/munge.key
@@ -95,7 +98,4 @@
 
    - name: set network file path
      command: wwsh -y file set network --path /etc/sysconfig/network --mode=0644 --uid=0
-
-   - name: add slurm.conf file to import
-     command: wwsh -y file import /etc/slurm/slurm.conf --name slurm.conf
 
