Removing the yum update step from the ansible role, as it has been performed in vagrant shell script

--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -7,8 +7,8 @@
        - "ohpc-warewulf"
        - "ohpc-slurm-server"
 
-   - name: yum update
-     yum: name=* state=latest update_cache=yes
+#   - name: yum update
+#     yum: name=* state=latest update_cache=yes
 
    - name: add slurm user
      user: name=slurm state=present system=yes
