Changes in this commit:
* Moved from bento/centos-7.5 box, to my custom made box in [VagrantCloud](https://app.vagrantup.com/ravi89/boxes/centos7.5)
* Removed the if else condition and also removed upgrade and reboot
step, since the modified box has the updated kernel by default

--- a/roles/nodes_vivify/tasks/main.yml
+++ b/roles/nodes_vivify/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 
+   - name: Waiting for the compute node to bootup
+     pause:
+       seconds: 150
+
    - name: create cluster using sacctmgr
      shell: sacctmgr create cluster {{ cluster_name }} -i
 
