Improve sacct configuration of cluster using template
- Create template file for the sacct_mgr configuration to load
from a file that is sensitive to local accounts and cluster name.
- Add variable for defining cluster users in groups_var/all
- Update ohpc_install task to load file from template.
- Remove redundant definition of sacct cluster name in nodes_vivify
which caused task to fail.

--- a/roles/ohpc_install/tasks/main.yml
+++ b/roles/ohpc_install/tasks/main.yml
@@ -20,7 +20,7 @@
      template: src=slurmdbd_conf.j2 dest=/etc/slurm/slurmdbd.conf
 
    - name: put the sacctmgr config in /etc/slurm
-     copy: src=xcbc-example.cfg dest=/etc/slurm/sacctmgr-heirarchy.cfg
+     template: src=xcbc-example.j2 dest=/etc/slurm/sacctmgr-heirarchy.cfg
 
    - name: set the gres.conf on the master
      copy: src=gres.conf dest=/etc/slurm/gres.conf
